# LowLight-Portrait-Enhancement

./: .gitignore  AGENTS.md  CLAUDE.md  项目实现方案.md  项目实现顺序.txt
.claude/: settings.json  settings.local.json
LowLight-Portrait-Enhancement/: README.md  environment.yml  project_paths.py  requirements.txt  tmpclaude-d587-cwd
LowLight-Portrait-Enhancement/archive/: README.md
LowLight-Portrait-Enhancement/archive/models/: repvgg_block.py  unet_repvgg.py
LowLight-Portrait-Enhancement/deploy/: ONNX_TOOLS_GUIDE.md  batch_test_onnx.py  export_onnx.py  prepare_calibration.py  verify_onnx.py
LowLight-Portrait-Enhancement/deploy/calibration/: imagelist.txt
LowLight-Portrait-Enhancement/deploy/cpp/: CMakeLists.txt  OPTIMIZATION_SUMMARY.md
LowLight-Portrait-Enhancement/deploy/cpp/include/: config.h  ncnn_wrapper.h  onnx_wrapper.h  retinexformer_engine.h  session_pool.h  thread_pool.h  tiling_manager.h
LowLight-Portrait-Enhancement/deploy/cpp/src/: demo.cpp  main.cpp  ncnn_wrapper.cpp  onnx_wrapper.cpp  retinexformer_engine.cpp  session_pool.cpp  tiling_manager.cpp
LowLight-Portrait-Enhancement/models/: __init__.py  losses.py  retinexformer.py
LowLight-Portrait-Enhancement/models/archs/: __init__.py  retinexformer_arch.py
LowLight-Portrait-Enhancement/scripts/: doctor.py  setup.py
LowLight-Portrait-Enhancement/tests/: test_project_paths.py  test_retinexformer.py
docs/: 00_基础.md  01_环境配置.md  02_ISP基础.md  03_AWB模块.md  04_HDR融合.md  05_AI降噪.md  06_AI超分.md  08_NCNN部署.md  09_数据合成.md
interview/: 07_面试准备.md
references/ncnn-tools/ncnn-20240820-windows-vs2022/arm/include/ncnn/: platform.h
references/ncnn-tools/ncnn-20240820-windows-vs2022/arm64/include/ncnn/: platform.h
